Add FontAwesome to all pages

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>assets/bootstrap.css">
     <link rel="stylesheet" href="<%= BASE_URL %>assets/app.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>assets/fa-all.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
