Add StatusPage embed

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -23,5 +23,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://3j02ybrwvyv9.statuspage.io/embed/script.js"></script>
   </body>
 </html>
