--- a/website/public/index.html
+++ b/website/public/index.html
@@ -15,6 +15,7 @@
 <!--          } catch (e) { console.error(e); }-->
 <!--      </script>-->
     <link rel="stylesheet" href="<%= BASE_URL %>assets/fa-all.css">
+    <link rel="icon" href="/favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
