Migrate from vue cli to vite

--- a/website/index.html
+++ b/website/index.html
@@ -9,16 +9,18 @@
         document.getElementById("science").dataset.domain += "," + window.location.hostname;
         document.getElementById("science").src = "https://science.slmn.io/science.js";
     </script>
-    <link rel="stylesheet" href="<%= BASE_URL %>assets/initial.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>assets/fa-all.css">
+    <link rel="stylesheet" href="/assets/initial.css">
+    <link rel="stylesheet" href="/assets/fa-all.css">
     <link rel="icon" href="/favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>SLMN.GG</title>
 </head>
 <body>
     <noscript>
-        <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        <strong>We're sorry but SLMN.GG doesn't work properly without JavaScript enabled.
             Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+
 </body>
 </html>
